--- a/front/package.json
+++ b/front/package.json
@@ -7,13 +7,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
+    "babel-plugin-syntax-flow": "^6.18.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "concurrently": "^7.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
+    "typescript": "^4.8.4",
     "web-vitals": "^1.0.1",
+    "webpack": "^5.74.0",
     "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
@@ -43,8 +48,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000",
+  "proxy": "https://capstone2team.herokuapp.com/",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3"
   }
 }
